--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 						<li><a href="https://chat.openai.com/" target="_blank"><img src="images/gpt.png" alt="Img">ChatGPT</a></li>
 						<li><a href="https://gemini.google.com/" target="_blank"><img src="images/gemini.png" alt="Img">Gemini</a></li>
 						<li><a href="https://claude.ai/" target="_blank"><img src="images/claude.png" alt="Img">Claude</a></li>
-						<li><a href="https://www.programiz.com/python-programming/online-compiler/" target="_blank"><img src="images/programiz.png" alt="Img">Facebook</a></li>
+						<li><a href="https://www.programiz.com/python-programming/online-compiler/" target="_blank"><img src="images/programiz.png" alt="Img">Programiz</a></li>
 						<li><a href="https://translate.google.com/" target="_blank"><img src="images/translate.png" alt="Img">Translate</a></li>
 						<li><a href="https://outlook.live.com/" target="_blank"><img src="images/outlook.png" alt="Img">Outlook</a></li>
 						<li><a href="https://www.pittsfield.net/" target="_blank"><img src="images/pps.png" alt="Img">PPS</a></li>
