--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 				<div class="grid">
 					<ul>				
 						<li><a href="https://mail.google.com" target="_blank"><img src="images/gmail.png" alt="Img">Gmail</a></li>
-						<li><a href="https://drive.google.com/drive/home/" target="_blank"><img src="images/gdrive.png" alt="Img">GDrive</a></li>
+						<li><a href="https://drive.google.com/drive/home" target="_blank"><img src="images/gdrive.png" alt="Img">GDrive</a></li>
 						<li><a href="https://clever.com/in/pittsfieldma/teacher" target="_blank"><img src="images/clever.png" alt="Img">Clever</a></li>
 						<li><a href="https://pittsfieldschools.powerschool.com/teachers/home.html" target="_blank"><img src="images/power.png" alt="Img">PowerSchool</a></li>
 						<li><a href="https://pass.securly.com/dashboard/" target="_blank"><img src="images/pass.png" alt="Img">Pass</a></li>
