--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 </style>
 
 <head>
+	<link href="//www.gstatic.com/images/branding/searchlogo/ico/favicon.ico" rel="icon">
 	<script>
 
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
@@ -196,3 +197,4 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 
 </body>
 </html>
+
