--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 </style>
 
 <head>
-	<link href="//www.gstatic.com/images/branding/searchlogo/ico/favicon.ico" rel="icon">
+<!-- 	<link href="//www.gstatic.com/images/branding/searchlogo/ico/favicon.ico" rel="icon"> -->
+<link href="https://raw.githubusercontent.com/mrrexxwei/myportal/refs/heads/main/images/book.png" rel="icon">
+	
 	<script>
 
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
@@ -197,4 +199,5 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 
 </body>
 </html>
+
 
