--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			
 			<!-- Calendar -->
 			<div>
-				<iframe src="https://calendar.google.com/calendar/embed?src=kweirachmaciej%40pittsfield.net&ctz=America%2FNew_York" style="border: 0" width="100%" height="340" frameborder="0" scrolling="no"></iframe>
+				<iframe src="https://calendar.google.com/calendar/embed?src=kweirachmaciej%40pittsfield.net&ctz=America%2FNew_York" style="width:305px; height:350px; border:0; overflow-x:hidden; frameborder:0"></iframe>
 			</div>
 			<br>
 
@@ -404,3 +404,4 @@
 	</script>
 </body>
 </html>
+
