Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			
 			<!-- Sidebar Search bar -->
 			<div>
-				<input type="text" id="sValue" style="width:100%" >
+				<input type="text" id="sValue" style="width:100%; margin:15px 0px" >
 				<br>
 				<button id="searchBtn" onclick="googlesearch()" >  &nbsp; Google &nbsp;</button> &nbsp;&nbsp;&nbsp;
 				<button id="searchBtn" onclick="bingsearch()" >  &nbsp; &nbsp; Bing &nbsp; &nbsp;</button>&nbsp;&nbsp;&nbsp;
@@ -404,5 +404,6 @@
 	</script>
 </body>
 </html>
+
 
 
