--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<div class="grid">
 					<ul>				
 						<li><a href="https://mail.google.com" target="_blank"><img src="images/gmail.png" alt="Img">Gmail</a></li>
-						<li><a href="https://drive.google.com/drive/my-drive" target="_blank"><img src="images/gdrive.png" alt="Img">GDrive</a></li>
+						<li><a href="https://drive.google.com/drive/home" target="_blank"><img src="images/gdrive.png" alt="Img">GDrive</a></li>
 						<li><a href="https://clever.com/in/pittsfieldma/teacher" target="_blank"><img src="images/clever.png" alt="Img">Clever</a></li>
 						<li><a href="https://pittsfieldschools.powerschool.com/teachers/home.html" target="_blank"><img src="images/power.png" alt="Img">PowerSchool</a></li>
 						<li><a href="https://pass.securly.com/dashboard/" target="_blank"><img src="images/pass.png" alt="Img">Pass</a></li>
@@ -404,6 +404,7 @@
 	</script>
 </body>
 </html>
+
 
 
 
